# representation-theory

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: agent_symmetry.rs  character.rs  decomposition.rs  group.rs  induced.rs  irreducible.rs  lib.rs  representation.rs  tensor.rs  young.rs
tests/: integration_tests.rs
